packages/front-end/styles/global.scss
/* ... */
.welcome {
  z-index: 1000;
  position: relative;
  min-height: 100vh;
  font-family: Poppins, "Helvetica Neue", Arial, sans-serif;

  .intro-side {
    background-color: $purple;
    background: radial-gradient(
      at 50% 100%,
      rgba(109, 18, 228, 0.75),
      rgb(15, 1, 94)
    );
    color: #fff;
    padding-bottom: 30px;
    vertical-align: middle;
    min-height: 100%;
  }
  .ghosted-logo {
    background: transparent url("/logo/growth-book-logomark-ghosted.png") 50%
      50%;
    background-size: contain;
    background-repeat: no-repeat;
    min-height: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 10px;
    right: 10px;
    opacity: 0.5;
  }
  .logo {
    position: absolute;
    bottom: 10px;
    left: 0;
    right: 0;
    text-align: center;
  }
  .form-side {
    background-color: #fff;
    .formwrap {
      width: 100%;
      max-width: 500px;
    }
  }
  h1,
  h2,
  h3 {
    font-weight: 600;
  }
  .logout-link {
    position: absolute;
    top: 20px;
    right: 20px;
  }
  .tiptrigger {
    top: -1px;
  }
}
@media (min-width: 575px) {
  .welcome {
    .full-height {
      min-height: 100vh;
    }
    .intro-side {
      padding-bottom: 0;
    }
  }
}

.experiment-compact-holder {
  width: 100%;
  overflow-x: auto;
}

.experiment-tooltip {
  position: absolute;
  left: 50%;
  width: 300px;
  margin-left: -150px;
  text-align: center;
  bottom: 0;
  border-radius: 6px;
  font-size: 0.8em;
  background: rgba(255, 255, 255, 0.7);
  .tooltip-results {
    .ci-neg {
      color: $dark-red;
    }
    .ci-pos {
      color: $dark-green;
    }
    > div {
      padding: 0 8px;
    }
  }
  .tooltip-arrow {
    position: absolute;
    width: 16px;
    height: 16px;
    transform: rotate(45deg);
    right: -8px;
    top: 70%;
    background-color: #fff;
    box-shadow: rgba(6, 6, 6, 0.365) 0px 0px 1px;
    clip-path: polygon(0% 0%, 104% -4%, 100% 100%);
    border: 1px inset rgba(0, 0, 0, 0.1);
  }
}

.experiment-compact {
  border-spacing: 0;
  border: 1px solid #ddd;

  td,
  th {
    border: 1px solid #ddd;
  }

  thead {
    th {
      background: #f4f4f4;
      color: #555;

      &.metric {
        border-bottom: 7px solid #999;
      }
      &.variation0,
      &.variation4 {
        border-bottom: 7px solid #772eff;
      }
      &.variation1,
      &.variation5 {
        border-bottom: 7px solid #039dd1;
      }
      &.variation2,
      &.variation6 {
        border-bottom: 7px solid #fd7e14;
      }
      &.variation3,
      &.variation7 {
        border-bottom: 7px solid #e83e8c;
      }
    }
  }
  .value {
    border-left: 3px solid #ccc;
  }

  thead tr:first-child th:first-child,
  tbody th:first-child {
    position: sticky;
    left: 0;
    width: auto;
    z-index: 999;
    border-right: 2px solid #ccc;
  }

  tbody {
    tr {
      border-bottom: 1px solid #ddd;

      &.all-dimension {
        border-bottom: 5px solid #ccc;
      }
    }
    td,
    th {
      vertical-align: top;
    }
    th:first-child {
      background: #fff;
    }
  }

  td.variation:not(.value):not(.won):not(.lost) {
    opacity: 0.6;
  }

  .inverse-indicator {
    color: $orange;
  }

  &.aligned-graph {
    td.variation:not(.value):not(.won):not(.lost) {
      opacity: 1;
      color: #999;
    }
  }
  .aligned-graph-row {
    .experiment-tooltip {
      display: none;
    }
    &:hover .experiment-tooltip {
      display: block;
    }
  }

  .compact-graph {
    padding: 0;
    position: relative;
    .expectedwrap {
      line-height: 20px;
      padding-right: 10px;
      min-width: 120px;
      max-width: 120px;
      width: 120px;
      .expectedArrows {
        font-size: 0.7rem;
        position: relative;
        top: -2px;
      }
      .errorrange {
        font-size: 0.9rem;
      }
    }
  }
  .result-number {
    line-height: 1rem;
  }

  .change-container {
    display: flex;
    padding-bottom: 30px;
    color: #666;
    font-size: 0.9em;
    .left-label {
      flex: 1;
      text-align: right;
    }
    .right-label {
      flex: 1;
    }
    .bar-holder {
      width: 150px;
      display: flex;
      margin: 0 8px;
      position: relative;
      .midline {
        position: absolute;
        top: 0;
        left: 50%;
        height: 100%;
        border-left: 2px dotted #000;
      }
      .expected {
        position: absolute;
        top: 100%;
        left: 50%;
        width: 100px;
        text-align: center;
        margin-left: -50px;
      }
      .win {
        background-color: #a6edd1;
      }
      .lose {
        background-color: #ff8075;
      }
    }
  }
  .chance {
    text-align: center;
  }

  td.won,
  td.lost {
    opacity: 1;
    .change-container {
      .bar-holder {
        .win {
          background: linear-gradient(to bottom, #30d395 0%, #a6edd1 100%);
        }
        .lose {
          background: linear-gradient(to bottom, #d33e31 0%, #edaca6 100%);
        }
      }
    }
    &.chance {
      font-weight: bold;
    }
  }

  td.won {
    background-color: rgba(#a6edd1, 0.3);
    color: $dark-green;
    .expected {
      font-weight: bold;
    }
  }
  td.lost {
    background-color: rgba(#edaca6, 0.3);
  }

  .metricname:hover {
    z-index: 1060;
  }
}

.change-bar {
  align-items: center;
  .label {
    width: 80px;
  }
  .bar-holder {
    width: 120px;
    background: #f2f2f2;
    border-radius: 4px;
    height: 1em;
    position: relative;
  }
  .bar {
    background: #aaa;
    position: absolute;
    top: 0;
    bottom: 0;
    &.bg-success.normal,
    &.bg-danger.inverse {
      border-top-right-radius: 4px;
      border-bottom-right-radius: 4px;
    }
    &.bg-danger.normal,
    &.bg-success.inverse {
      border-top-left-radius: 4px;
      border-bottom-left-radius: 4px;
    }
  }
  .zero {
    width: 1px;
    top: -8px;
    bottom: -8px;
    position: absolute;
    background: #333;
    opacity: 0.5;
  }
}
/* ... */

